--- a/Platform_Sign_up/.classpath
+++ b/Platform_Sign_up/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="F:/JAR FILE/Apache POI/poi-3.15/lib/poi-scratchpad-3.15.jar"/>
 	<classpathentry kind="lib" path="F:/JAR FILE/Apache POI/poi-3.15/ooxml-lib/curvesapi-1.04.jar"/>
 	<classpathentry kind="lib" path="F:/JAR FILE/Apache POI/poi-3.15/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="F:/JAR FILE/extentreports-2.41.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
